v1.1.0 ready (#12)
* version 1.1.0 unstable

* version downgrade #11

* POM changes for version upgrade  #11